--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,3 +15,8 @@
         #warning.message= flash[:warning]
 
       = yield
+      
+    <%= button_to "Sign Up/Login", action: "new" %>
+   "<form method="post" action="/controller/new" class="button_to">
+      <input value="New" type="submit" />
+    </form>"
