trying to add button

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,6 +17,6 @@
       = yield
       
     <%= button_to "Sign Up/Login", action: "new" %>
-   => "<form method="post" action="/controller/new" class="button_to">
+    <form method="post" action="/controller/new_user_path" class="button_to">
       <input value="New" type="submit" />
     </form>"
