trying to make a button

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,11 +9,11 @@
 
   %body
     %h1.title Rotten Potatoes!
-    #main
     <%= button_to "Sign Up/Login", action: "new" %>
-    <form method="post" action="/controller/new_user_path" class="button_to">
-      <input value="New" type="submit" />
-    </form>"
+// # => "<form method="post" action="/controller/new" class="button_to">
+// #     <input value="New" type="submit" />
+// #    </form>"
+    #main
       - if flash[:notice]
         #notice.message= flash[:notice]
       - elsif flash[:warning]
