adding flash class

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,8 +17,8 @@
     
     #main
       - if flash[:notice]
-        #notice.message= flash[:notice]
+        #notice.message.flash_message= flash[:notice]
       - elsif flash[:warning]
-        #warning.message= flash[:warning]
+        #warning.message.flash_message= flash[:warning]
 
       = yield
